--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,12 @@ glutin = "0.32"
 glow = "0.16"
 anyhow = "1"
 tracing = "0.1"
-thiserror = "1"
+thiserror = "2"
 glam = "0.30"
 tracing-subscriber = "0.3"
 clap = "4"
 bitflags = "2"
+serde = { version = "1", features = ["derive"] }
+toml = "0.9"
+shaderc = "0.10"
+portable-atomic = "1"
