--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,4 @@ serde = { version = "1", features = ["derive"] }
 toml = "0.9"
 shaderc = "0.10"
 portable-atomic = "1"
+bytemuck = { version = "1", features = ["derive"] }
