--- a/crates/cubic-render-vk/Cargo.toml
+++ b/crates/cubic-render-vk/Cargo.toml
@@ -10,6 +10,7 @@ ash-window = { workspace = true }
 raw-window-handle = { workspace = true }
 anyhow = { workspace = true }
 tracing = { workspace = true }
+bytemuck = { workspace = true }
 
 [build-dependencies]
 shaderc = { workspace = true }
