--- a/crates/cubic-render/Cargo.toml
+++ b/crates/cubic-render/Cargo.toml
@@ -2,6 +2,8 @@
 name = "cubic-render"
 version = "0.1.0"
 edition = "2021"
+publish = false
+
 
 [dependencies]
 raw-window-handle = { workspace = true }
