--- a/crates/cubic-math/Cargo.toml
+++ b/crates/cubic-math/Cargo.toml
@@ -2,6 +2,8 @@
 name = "cubic-math"
 version = "0.1.0"
 edition = "2021"
+publish = false
+
 
 [dependencies]
 glam = { workspace = true, features = ["libm"] }
