--- a/crates/cubic-platform/Cargo.toml
+++ b/crates/cubic-platform/Cargo.toml
@@ -2,6 +2,8 @@
 name = "cubic-platform"
 version = "0.1.0"
 edition = "2021"
+publish = false
+
 
 [dependencies]
 winit = { workspace = true, features = ["rwh_06"] }
