--- a/crates/cubic-render-vk/Cargo.toml
+++ b/crates/cubic-render-vk/Cargo.toml
@@ -2,6 +2,7 @@
 name = "cubic-render-vk"
 version = "0.1.0"
 edition = "2021"
+publish = false
 
 [dependencies]
 cubic-render = { path = "../cubic-render" }
